2003-05-27  Jason Merrill  <jason@redhat.com>

	* tree.c (expr_first, expr_length): New fns.
	* tree.h: Declare them.

	* tree.c (iterative_hash_expr): Hash commutative expressions
	consistently.

2003-05-20  Jason Merrill  <jason@redhat.com>

	* tree.c (expr_last): New fn.
	* tree.h: Declare it.
	* objc/objc-act (expr_last): Rename to objc_expr_last.

2003-05-19  Jason Merrill  <jason@redhat.com>

	* tree-inline.c (copy_body_r): Avoid generating &* during inline
	substitution.

2003-05-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* Makefile.in (regmove.o-warn): Change to -Wno-error.

2003-05-13  Jason Merrill  <jason@redhat.com>

	* tree.h (STRIP_MAIN_TYPE_NOPS): New macro.

	* tree.c (iterative_hash_expr): New fn.

	* c-semantics.c (emit_local_var): Don't mess with temp slots if
	there's no initializer.

2003-05-10  Alexandre Oliva  <aoliva@redhat.com>

	* reload1.c (reload_cse_move2add): Revert part of my 2003-05-09's
	patch.

2003-05-10  Zack Weinberg  <zack@codesourcery.com>

	* diagnostic.c: Reorder functions for clarity, putting all the
	functions in the "error" family next to each other, and
	likewise all the functions in the "error_with_decl" family.
	Some other routines were moved too.  Add comments.
	(vbuild_message_string): Fold into sole caller.


2003-05-11  Ulrich Weigand  <uweigand@de.ibm.com>

	* except.c (EH_RETURN_STACKADJ_RTX): Do not define.
	(EH_RETURN_HANDLER_RTX): Likewise.
	(expand_builtin_eh_return): Do not copy stack adjustment
	if EH_RETURN_STACKADJ_RTX is not defined.
	(expand_eh_return): Likewise.  Also, do not pass stack
	adjustment as argument to the eh_return pattern.
	* except.h (MUST_USE_SJLJ_EXCEPTIONS): Do not define just
	because EH_RETURN_STACKADJ_RTX is not defined.
	* unwind-dw.c (uw_update_context_1): If EH_RETURN_STACKADJ_RTX
	is not defined, treat stack pointer like a regular register.
	(uw_init_context_1): Set up fake initial stack pointer register.
	(uw_install_context_1): Do not compute stack adjustment if