@@ -1,3 +1,7 @@
+2003-05-29  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (unstrap): Remove stage_last after make unstage1.
+
 2003-05-27  Jason Merrill  <jason@redhat.com>
 
 	* tree.c (expr_first, expr_length): New fns.
